[FIXED] Multisidebar size (height) adaptation behavior when wrapped element come to end

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -7,6 +7,7 @@
   position: sticky;
 }
 .content {
+  top:-10rem;
   justify-content: center;
   width: 100%;
   min-height: 100vh;
