--- a/src/components/Sidebars/TrackSidebar/styles.module.css
+++ b/src/components/Sidebars/TrackSidebar/styles.module.css
@@ -28,7 +28,7 @@
   background-color: black;
 }
 .body.active {
-  max-height: 60vh;
+  max-height:calc(100vh - 14rem);
   max-width: 25rem;
   scale: 1;
   opacity: 1;
